# memorygraph

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: tech-report-2026-06-17-v1.md
docs/en/: API_REFERENCE.md  DEPLOYMENT.md  USER_GUIDE.md
docs/zh/: API_REFERENCE.md  DEPLOYMENT.md  USER_GUIDE.md
src/memorygraph/: __init__.py  config.py
src/memorygraph/cli/: __init__.py  main.py  shared.py
src/memorygraph/cli/commands/: doctor.py  indexing.py  querying.py  semantic.py  serving.py  utils.py
src/memorygraph/export/: __init__.py  lsif.py
src/memorygraph/mcp/: __init__.py  server.py
src/memorygraph/parsing/: __init__.py  batch.py  detector.py  extractor.py  ir.py  pipeline.py  registry.py  resolver.py  ts_parser.py
src/memorygraph/plugins/: __init__.py
src/memorygraph/semantic/: __init__.py  analysis.py  conversation.py  embeddings.py  models.py  patterns.py  store.py
src/memorygraph/storage/: __init__.py  backend.py  cache.py  connection.py  helpers.py  manager.py  pg_repository.py  repositories.py  schema.py  semantic_repo.py
src/memorygraph/storage/migrations/: 003_semantic.sql
src/memorygraph/web/: __init__.py  api.py  renderer.py  server.py
src/memorygraph/web/renderer/: __init__.py  export.py  graph_viz.py  layout.py  panels.py  search.py  styles.py  tours.py
systemd/: README.md  memorygraph-serve@.service  memorygraph-watch@.service
tests/: __init__.py  conftest.py  test_analysis.py  test_backend.py  test_batch.py  test_bench_stress.py  test_cache.py  test_chaos.py  test_cli.py  test_cli_commands.py  test_cli_shared.py  test_config.py  test_connection.py  test_conversation.py  test_coverage_push.py  test_cross_platform.py  test_daemon.py  test_detector.py  test_e2e.py  test_e2e_cli.py  test_e2e_web.py  test_edge_cases.py  test_embeddings.py  test_error_recovery.py  test_extractor_multilang.py  test_extractor_python.py  test_extractor_typescript.py  test_ir.py  test_lsif.py  test_manager.py  test_mcp.py  test_mcp_e2e.py  test_mcp_server.py  test_parallel_parser.py  test_patterns.py  test_pg_integration.py  test_pg_repository.py  test_pipeline.py  test_plugins.py  test_registry.py  (+13 more)
tests/bench/: __init__.py  bench_index.py  bench_query.py  bench_visualize.py  generate_repo.py  runner.py  synthetic.py
tests/fixtures/: complex.py  sample.cs  sample.go  sample.java  sample.py  sample.rs  sample.ts  smelly.py
